Fix: Prevent navbar text from being cut of on small screens

--- a/src/renderer/_variables.scss
+++ b/src/renderer/_variables.scss
@@ -85,6 +85,7 @@ $base-offset-y: 1rem;
 $navbar-dark-color: $tale-blue;
 $navbar-border-color: $tale-blue;
 $navbar-border-width: 1px;
+$navbar-font-size-sm: $font-size-sm;
 $navbar-padding-x: 0;
 $navbar-padding-y: 0;
 $navbar-content-height: 40px;
